the problem is that default EditSelection command in Revit won't let you delete multiple saved selections in one go making deletions of multiple saved selections a cumbersome process
may have to store Element Ids/GUIDs in a separate file instead to avoid this overhead in the future and manage it with custom commands
*** 05
**** =19:22= tried increasing performance of DataGrid2 by various means, but nothing seemed to make any major difference
virtual list control among other things
hopefully no new bugs were introduced in the process
***** tried making it dark themed as well, but sadly couldn't get scrollbars to change colors, so reverted back to light
*** 12
**** =23:33= couldn't adapt TagNotTaggedElementsInSelectedViews command to tag elements in linked models
*** 13
**** =17:28= couldn't fix incorrect view range in SectionBox3DFromCurrentView command
**** =17:59= found it with revitlookup addin - GetViewRange - PlanViewRange : GetOffset (bottom clip plane, underlay bottom, cut plane, top clip plane) and GetLevelId (level - bottom clip plane, cut plane, top clip plane)
*** 15
**** =00:08= got minimal viable version of a command creating sections through selected elements
chatgpt explained that likely culprit for incorrect bounding box calculations was using get_BoundingBox(null) instead of get_BoundingBox(activeview)
  the latter was needed to account for bounding box relative to active view
https://chatgpt.com/share/67afdaf3-9d4c-800c-81bc-327cdd7382b1
*** 17
**** =12:03= couldn't get OffsetViewOrigin command to work
waiting for o3 model to reset, hopefully it will find a solution, all other LLMs failed, couldn't find a location parameter via revitlookup addin
***** =19:03= made a few more attempts with o3 model, but couldn't still get it to work
having bad luck with sections in revit in general
*** 18
**** =13:40= couldn't write a command that would automate creating a detail item family out of current elements
simialar in user experience as grouping